--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "development backend server for geeb3",
   "main": "app.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.9"
   },
