--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "development backend server for geeb3",
   "main": "app.js",
   "dependencies": {
+    "async": "^3.2.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
