get applicant info route + refactoring email send

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "node ./app.js",
+    "start": "nodemon ./app.js",
     "devstart": "nodemon ./app.js",
     "debugstart": "SET DEBUG=local-library:* & npm run start"
   },
